fetch_notice_log.txt
  File "<string>", line 1
    "import
    ^
SyntaxError: unterminated string literal (detected at line 1)
